--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     }
 
     #neverForget {
+      top: 20px;
       font-size: 3.5em;
       font-weight: bold;
       text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
@@ -61,8 +62,8 @@
     }
 
     #pressF {
+      top: 140px;
       font-size: 1.5em;
-      margin-top: 12px;
       cursor: pointer;
       color: #fffce8;
     }
@@ -71,9 +72,9 @@
     }
 
     #secretHint {
-      font-size: 0.9em;
+      top: 195px;
+      font-size: 1.1em;
       color: #7EC8E3;
-      margin-top: 5px;
       font-style: italic;
     }
 
